--- a/Uno/Properties/Resources.resx
+++ b/Uno/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="Chat_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Chat_Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Chat_Icon_NewMessage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Chat_Icon-NewMessage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="User_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\User_Icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
