--- a/Uno/Properties/Resources.resx
+++ b/Uno/Properties/Resources.resx
@@ -301,4 +301,7 @@
   <data name="yellow_zero" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\YellowCards\yellow_zero.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="backCard" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\backCard.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
